...
    "socialLogin": "O inicia sessió amb",

    "logIn": "Iniciar sessió",
    "signUp": "Crear compte",
    "creatingAccount": "Creant compte...",

    "success": "El compte s'ha creat correctament",

    "errors": {
      "requiredFields": "Omple tots els camps",
      "invalidEmail": "Format de correu electrònic incorrecte",
      "passwordMismatch": "Les contrasenyes no coincideixen",
      "privacyRequired": "Has d'acceptar la Privacy Notice",
...
