appId: com.AgriTwin.app

---
- launchApp

- tapOn: "Username"
- inputText: "testuser"

- tapOn: "Email"
- inputText: "e2e@example.com"

- tapOn: "Password"
- inputText: "Password123!"

- tapOn: "Confirm password"
- inputText: "Password123!"

- tapOn: "Accept privacy notice"

- tapOn: "Accept security policy"

- tapOn: "Sign up"

- assertVisible: "El compte s'ha creat correctament"